[package]
name = "rust-feature-management-prototype"

version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
regex = "1.6.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
tower = "0.4"

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"]}
